# stormbpmn_mkdocs

./: .gitignore  404.html  global_vars.yaml  hooks.py  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml  stormbpmn.yml  styleguide.yaml  tags.json  toc.yaml  vars.yaml
_templates/system/: constraints_permissions.template  constraints_plan.template  constraints_roles.template
admins/: index.html
admins/add_team/: index.html
admins/admin_team_work/: index.html
admins/edit_team_permissions/: index.html
admins/groups_management/: index.html
admins/team/: index.html
admins/version/: index.html
all/: index.html
all/approval_request/: index.html
analytics/: index.html
approvals/: index.html
approvals/approve/: index.html
architects/: index.html
architects/create_business_proc/: index.html
architects/org/: index.html
architects/registry/: index.html
architects/value/: index.html
beginners/: index.html
hooks/: auto_constraints.py
main/about_doc/: index.html
main/commitment/: index.html
main/extra_content/: index.html
main/extra_content/articles/: index.html
main/extra_content/videos/: index.html
main/faq/: index.html
main/quick_start/: index.html
mock/: index.html
search/: search_index.json
stylesheets/: extra.css
