[project]
name = "stormbpmn-new-doc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "csscompressor==0.9.5",
    "debinterface==3.4.0",
    "ghp-import==2.1.0",
    "htmlmin2==0.1.13",
    "jsmin==3.0.1",
    "markdown==3.10.1",
    "mergedeep==1.3.4",
    "mkdocs==1.6.1",
    "mkdocs-get-deps==0.2.0",
    "mkdocs-minify-plugin==0.8.0",
    "mkdocs-static-i18n==1.3.0",
    "packaging==26.0",
    "pathspec==1.0.4",
    "platformdirs==4.5.1",
    "python-dateutil==2.9.0.post0",
    "pyxs==0.4.1",
    "pyyaml-env-tag==1.1",
    "watchdog==6.0.0",
]
