[project]
name = "stormbpmn-new-doc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "babel==2.18.0",
    "backrefs==6.1",
    "beautifulsoup4==4.14.3",
    "bs4==0.0.2",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "csscompressor==0.9.5",
    "debinterface==3.4.0",
    "ghp-import==2.1.0",
    "hjson==3.1.0",
    "htmlmin2==0.1.13",
    "idna==3.11",
    "jinja2==3.1.6",
    "jsmin==3.0.1",
    "markdown==3.10.1",
    "markupsafe==3.0.3",
    "mergedeep==1.3.4",
    "mkdocs==1.6.1",
    "mkdocs-autorefs==1.4.4",
    "mkdocs-get-deps==0.2.0",
    "mkdocs-glightbox==0.5.2",
    "mkdocs-macros-plugin==1.5.0",
    "mkdocs-material==9.7.1",
    "mkdocs-material-extensions==1.3.1",
    "mkdocs-meta-manager==1.1.0",
    "mkdocs-minify-plugin==0.8.0",
    "mkdocs-static-i18n==1.3.0",
    "packaging==26.0",
    "paginate==0.5.7",
    "pathspec==1.0.4",
    "platformdirs==4.5.1",
    "pygments==2.19.2",
    "pymdown-extensions==10.20.1",
    "python-dateutil==2.9.0.post0",
    "pyxs==0.4.1",
    "pyyaml==6.0.3",
    "pyyaml-env-tag==1.1",
    "requests==2.32.5",
    "selectolax==0.4.6",
    "six==1.17.0",
    "soupsieve==2.8.3",
    "super-collections==0.6.2",
    "termcolor==3.3.0",
    "typing-extensions==4.15.0",
    "urllib3==2.6.3",
    "watchdog==6.0.0",
]